[gd_scene load_steps=6 format=2]

[ext_resource path="res://gfx/icons/empty.png" type="Texture" id=1]
[ext_resource path="res://ui/DetailButton.gd" type="Script" id=2]
[ext_resource path="res://ui/ability_card.gd" type="Script" id=3]
[ext_resource path="res://font/ChronoLarge.tres" type="DynamicFont" id=4]
[ext_resource path="res://font/Chrono.tres" type="DynamicFont" id=5]

[node name="ability_card" type="Node2D"]
z_index = 1
script = ExtResource( 3 )

[node name="Panel" type="Panel" parent="."]
margin_right = 512.0
margin_bottom = 104.0
rect_pivot_offset = Vector2( 376, -136 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AbilityName" type="RichTextLabel" parent="Panel"]
margin_left = 80.0
margin_top = 24.0
margin_right = 560.0
margin_bottom = 64.0
custom_fonts/normal_font = ExtResource( 4 )
bbcode_enabled = true
bbcode_text = "Sample Text
"
text = "Sample Text
"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Panel"]
position = Vector2( 40, 40 )
texture = ExtResource( 1 )

[node name="CostLabel" type="RichTextLabel" parent="Panel/Sprite"]
margin_left = -40.0
margin_top = 32.0
margin_right = 40.0
margin_bottom = 72.0
custom_fonts/normal_font = ExtResource( 5 )
bbcode_enabled = true
bbcode_text = "[center]MP [color=#00c8ff]50"
text = "MP 50"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DetailButton" type="Button" parent="Panel"]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 512.0
margin_bottom = 104.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TypeLabel" type="RichTextLabel" parent="Panel"]
margin_left = 88.0
margin_top = 56.0
margin_right = 224.0
margin_bottom = 80.0
custom_fonts/normal_font = ExtResource( 5 )
bbcode_enabled = true
bbcode_text = "~ physical type ~"
text = "~ physical type ~"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="focus_entered" from="Panel/DetailButton" to="Panel/DetailButton" method="_on_DetailButton_focus_entered"]
[connection signal="mouse_entered" from="Panel/DetailButton" to="Panel/DetailButton" method="_on_DetailButton_mouse_entered"]
[connection signal="mouse_exited" from="Panel/DetailButton" to="Panel/DetailButton" method="_on_DetailButton_mouse_exited"]
[connection signal="pressed" from="Panel/DetailButton" to="." method="_on_DetailButton_pressed"]
